新增文章 我的人生目标.md

--- a/src/content/blog/2020年度总结.md
+++ b/src/content/blog/2020年度总结.md
@@ -3,18 +3,12 @@ title: 2020年度总结
 tags:
   - 年度总结
 pubDatetime: 2020-12-29 22:52:54
-author: Sat Naing
+author: 孙贺毅
 slug: 2020年度总结
 featured: false
 ogImage: https://user-images.githubusercontent.com/53733092/215771435-25408246-2309-4f8b-a781-1f3d93bdf0ec.png
-description: ""
+description: "一方面是由于加入的技术群很多人都在写年终总结，另一方面也是自己觉得确实应该写一篇文章来记录一下这一年，记录这无法忽视的疫情，记录这已经逝去的校园美好时光"
 ---
-
-# 写文章的原因
-
-一方面是由于加入的技术群很多人都在写年终总结，另一方面也是自己觉得确实应该写一篇文章来记录一下这一年，记录这无法忽视的疫情，记录这已经逝去的校园美好时光
-
-<!-- more -->
 
 # 疫情
 
@@ -24,7 +18,7 @@ description: ""
 
 不知不觉从在广州出差了两个月，这两个月几乎都是996，没想到我一毕业就体验了996的生活，不知道是该高兴还是该难过，反正那段时间是挺难熬的，而且在那个项目组，由于项目紧张，没有老同志教我，都是靠自己学习的，关键是不是目前使用的主流技术，技术问题不会了，在互联网上也搜索不到，非常难受。终于在出差了两个月后，回到了郑州，当天就赶紧去租了房（要不没有地方住），在郑州的生活现在回想起来还是挺惬意的，早上九点上班，由于住的地方离公司非常近，所以可以八点多起床，路上买个早餐，慢慢悠悠的地去公司。不好的地方在于 总是不能够6点准时下班，往往要拖时间，这让我很不爽，而且干的工作也不是我想要的，于是开始往北京的公司投简历，不知道是因为我没有来过北京，还是说因为它是祖国的首都，虽然其他城市我同样想去，但是感觉自己对北京有一种执念，所以投的北京的公司。由于是在职然后求职，所以也不是很着急，但是由于当时任务比较繁重，感觉自己搞不了了，也是想早点跳槽，正好在这个契机，一家北京的公司打来电话，又是简单的聊了聊，说他们不是做java开发的，是图形化开发，java作为底层，python作为上层，不用接触代码，但是自己想看也可以，于是我傻傻的急急忙忙的同意了，然后也是非常紧急，三天后就要在北京入职了，于是当天我就在公司提了离职，由于公司比较坑，按理来说我来实习的日子就应该算是在实习期内的，但是公司说必须拿到毕业证之后才能算做实习期，所以按照公司的方式来说，我还在实习期，所以三天之内就可以离职，所以我当天给公司提了离职在之后，一个在外出差的领导在逃避我，不跟我谈论这个话题，我很着急，所以第二天直接找了另外一个领导，交了电脑和相关资料后，就又匆匆忙忙的来北京了。
 
-​ 哎，怎么说那，我也不是非常有事业心的那种人，但是总是我觉得我还年轻，应该去外面闯荡一下，等到老了，有些东西了，会害怕失去了，就不会再有勇气想要去什么地方就去了。
+哎，怎么说那，我也不是非常有事业心的那种人，但是总是我觉得我还年轻，应该去外面闯荡一下，等到老了，有些东西了，会害怕失去了，就不会再有勇气想要去什么地方就去了。
 
 在北京的工作平常是在银行里面驻场开发，整天就是画图，每一天都感觉很漫长，和上一家一样，技术问题都无法在网上查阅到，更惨的是银行是内网开发，根本都上不了外网，感觉每天都是在煎熬，都在期待着下班。本来想着工作之余，自己多学习学习，提升自己的技术，因为自己并不想在这家公司长待，只是一个过渡期，没想到十一月份，自己还没有主动辞职，反倒是被公司主动辞退了。那个时候非常难受，虽然我认为自己工作的还不错，但是由于那个小领导不满意，只能被迫辞职了，比较怂的我也没有什么保证金。
 
