--- a/src/content/blog/2023年度总结.md
+++ b/src/content/blog/2023年度总结.md
@@ -3,7 +3,7 @@ title: 2023年度总结
 tags:
   - 年度总结
 pubDatetime: 2023-12-25 08:58:30
-author: Sat Naing
+author: 孙贺毅
 slug: 2023年度总结
 featured: false
 ogImage: https://user-images.githubusercontent.com/53733092/215771435-25408246-2309-4f8b-a781-1f3d93bdf0ec.png
