update default mod is dark

--- a/src/content/blog/2020年度总结.md
+++ b/src/content/blog/2020年度总结.md
@@ -7,7 +7,7 @@ author: 孙贺毅
 slug: 2020年度总结
 featured: false
 ogImage: https://user-images.githubusercontent.com/53733092/215771435-25408246-2309-4f8b-a781-1f3d93bdf0ec.png
-description: "一方面是由于加入的技术群很多人都在写年终总结，另一方面也是自己觉得确实应该写一篇文章来记录一下这一年，记录这无法忽视的疫情，记录这已经逝去的校园美好时光"
+description: ""
 ---
 
 # 疫情
