--- a/src/content/blog/自动添加更新时间.md
+++ b/src/content/blog/自动添加更新时间.md
@@ -1,3 +1,13 @@
+---
+title: 自动添加更新时间
+tags:
+  - astro
+author: 孙贺毅
+---
+
+修改pre-commit文件
+
+```bash
 #!/usr/bin/env sh
 . "$(dirname -- "$0")/_/husky.sh"
 # Modified files, update the modDatetime
@@ -27,3 +37,4 @@ git diff --cached --name-status | egrep -i "^(A).*\.(md)$" | while read a b; do
   git add $b
 done
 npx lint-staged
+```
