--- a/src/content/blog/自动添加更新时间.md
+++ b/src/content/blog/自动添加更新时间.md
@@ -3,9 +3,12 @@ title: 自动添加更新时间
 tags:
   - astro
 author: 孙贺毅
+pubDatetime:
+modDateTime:
 ---
 
 修改pre-commit文件1111111111111111
+22222
 
 ```bash
 #!/usr/bin/env sh
